syntax = "proto3";
package wavesenterprise;

import "contract_asset_operation.proto";
import "contract_keys_request.proto";
import "contract_keys_response.proto";
import "contract_transfer_in.proto";
import "data_entry.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "com.wavesenterprise.protobuf.service.contract";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

service ContractService {

  rpc Connect (ConnectionRequest) returns (stream ContractTransactionResponse);

  rpc CommitExecutionSuccess (ExecutionSuccessRequest) returns (CommitExecutionResponse);

  rpc CommitExecutionError (ExecutionErrorRequest) returns (CommitExecutionResponse);

  rpc GetContractKeys (ContractKeysRequest) returns (ContractKeysResponse);

  rpc GetContractKey (ContractKeyRequest) returns (ContractKeyResponse);

  rpc GetContractBalances (ContractBalancesRequest) returns (ContractBalancesResponse);

  rpc CalculateAssetId (CalculateAssetIdRequest) returns (AssetId);
}

message CalculateAssetIdRequest {
  int32 nonce = 1;
}

message ContractBalancesRequest {
  repeated google.protobuf.StringValue assets_ids = 1;
}

message ContractBalancesResponse {
  repeated ContractBalanceResponse assets_balances = 1;
}

message ContractBalanceResponse {
  google.protobuf.StringValue asset_id = 1;
  int64 amount = 2;
  int32 decimals = 3;
}

message ConnectionRequest {
  string connection_id = 1;
  reserved 2;
}

message ContractTransactionResponse {
  ContractTransaction transaction = 1;
  string auth_token = 2;
  BlockInfo current_block_info = 3;
}

message BlockInfo {
  int64 height = 1;
  int64 timestamp = 2;
  string miner_address = 3;
  string reference = 4;
}

message ContractTransaction {
  string id = 1;
  int32 type = 2;
  string sender = 3;
  string sender_public_key = 4;
  string contract_id = 5;
  repeated DataEntry params = 6;
  int64 fee = 7;
  int32 version = 8;
  bytes proofs = 9;
  int64 timestamp = 10;
  AssetId fee_asset_id = 11;
  repeated ContractTransferIn payments = 12;

  oneof data {
    CreateContractTransactionData create_data = 20;
    CallContractTransactionData call_data = 21;
  }
}

message CreateContractTransactionData {
  string image = 1;
  string image_hash = 2;
  string contract_name = 3;
}

message CallContractTransactionData {
  int32 contract_version = 1;
}

message ExecutionSuccessRequest {
  string tx_id = 1;
  repeated DataEntry results = 2;
  repeated ContractAssetOperation asset_operations = 3;
}

message ExecutionErrorRequest {
  string tx_id = 1;
  string message = 2;
  int32 code = 3;
}

message CommitExecutionResponse {
}

message ContractKeyRequest {
  string contract_id = 1;
  string key = 2;
}

message ContractKeyResponse {
  DataEntry entry = 1;
}

message AssetId {
  string value = 1;
}
